src/styles/hero.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
/*  
.hero {
  height: 100vh;
  background: #111;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  color: #c9a646;
  margin-top: -100px; 
}


.hero h1 {
  font-size: 4rem;
  margin-bottom: 1rem;
  text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
}

.hero p {
  font-size: 1.4rem;
  margin-bottom: 1.5rem;
}

.btn-book {
  background-color: #c9a646;
  border: none;
  padding: 1rem 2rem;
  color: black;
  font-size: 1.2rem;
  cursor: pointer;
  border-radius: 50px;
  transition: 0.3s;
  font-weight: bold;
  margin-top: 60px;
}

.btn-book:hover {
  background-color: #f0cf6b;
  transform: scale(1.05);
}  */


.hero {
  height: 100vh;
  background: linear-gradient(120deg, #0b0b0b, #1a1a1a);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 8%;
  color: white;
}




.hero-left {
  width: 50%;
}

.hero h1 {
  font-size: 4.5rem;
  color: #c9a646;
  margin-bottom: 20px;
}

.hero h1 span {
  color: white;
  text-shadow: 0 0 20px gold;
}

.hero p {
  font-size: 1.3rem;
  margin-bottom: 40px;
  line-height: 1.6;
}


.hero-buttons {
  display: flex;
  gap: 20px;
  margin-top: 30px;
}


.btn-book,
.btn-secondary {
  width: 260px;
  background: linear-gradient(45deg, #c9a646, #f0cf6b);
  border: none;
  padding: 16px 0;
  font-size: 1.1rem;
  border-radius: 50px;
  cursor: pointer;
  font-weight: bold;
  box-shadow: 0 0 20px rgba(201,166,70,0.7);
  text-align: center;
  transition: 0.3s ease;
  color: black;
  text-decoration: none;
}


.btn-book:hover,
.btn-secondary:hover {
  transform: scale(1.08);
  background: #c9a646;
  color: black;
}


.hero-right {
  width: 50%;
  display: flex;
  justify-content: center;
}

.hero-right img {
  height: 300px;
  width: 300px;
  border-radius: 50%;
  filter: drop-shadow(0 0 30px rgb(255, 215, 0));
  animation: float 3s ease-in-out infinite;
}

@keyframes float {
  0% { transform: translateY(0); }
  50% { transform: translateY(-15px); }
  100% { transform: translateY(0); }
}


@media (max-width: 768px) {
  .hero {
    flex-direction: column;
    text-align: center;
    padding: 40px;
  }

  .hero-left,
  .hero-right {
    width: 100%;
  }

  .hero-right img {
    width: 260px;
    height: 260px;
    /* margin-top: -90px; */
  }

  .hero h1 {
    font-size: 2.5rem;
    color: aqua;
    font-style: italic;
  }

  .hero h1 span {
    color: red;
  }
} 

